--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
       }
       // El click del botón. Aquí sucede la magia
       $boton.addEventListener("click", () => {
-        var elementos = document.querySelectorAll('app-navbar,p,h2,h3,b,th,th,caption');
+        var elementos = document.querySelectorAll('a,p,h1,h2,h3,b,th,td');
 
         // Iterar sobre los elementos y leer su contenido
         var contenido = "";
